[gd_scene load_steps=3 format=3 uid="uid://chfs468nnvicn"]

[ext_resource type="Script" uid="uid://dpt5jpqag1hef" path="res://scenes/edit-project-dialog/edit-project-dialog.gd" id="1_xd7bt"]

[sub_resource type="LabelSettings" id="LabelSettings_tr27p"]
font_size = 14
font_color = Color(0.921569, 0.921569, 0.921569, 1)

[node name="EditProjectDialog" type="Panel"]
custom_minimum_size = Vector2(800, 150)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_xd7bt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -394.0
offset_top = -96.0
offset_right = 394.0
offset_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Edit Project"
horizontal_alignment = 1

[node name="ProjectPathHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ProjectPathLabel" type="Label" parent="VBoxContainer/ProjectPathHBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Project Path:"
horizontal_alignment = 2

[node name="ProjectPathLineEdit" type="LineEdit" parent="VBoxContainer/ProjectPathHBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
tooltip_text = "Path to the project folder."
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="SelectExistingProjectFolderButton" type="Button" parent="VBoxContainer/ProjectPathHBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Select Existing"

[node name="CreateNewProjectFolderButton" type="Button" parent="VBoxContainer/ProjectPathHBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Create New"

[node name="ProjectNameHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="ProjectNameLabel" type="Label" parent="VBoxContainer/ProjectNameHBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 2
text = "Project Name:"
horizontal_alignment = 2

[node name="ProjectNameLineEdit" type="LineEdit" parent="VBoxContainer/ProjectNameHBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
caret_blink = true
caret_blink_interval = 0.5

[node name="GodotVersionHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="GodotVersionLabel" type="Label" parent="VBoxContainer/GodotVersionHBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Godot Version:"
horizontal_alignment = 2

[node name="GodotVersionOptionButton" type="OptionButton" parent="VBoxContainer/GodotVersionHBoxContainer"]
custom_minimum_size = Vector2(500, 32)
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_bottom = 20

[node name="ButtonHBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="VBoxContainer/MarginContainer/ButtonHBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "CANCEL"

[node name="SaveButton" type="Button" parent="VBoxContainer/MarginContainer/ButtonHBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "SAVE"

[node name="UpgradeDisclaimerLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Note for upgrades: Please launch into the appropriate godot project manager for performing upgrades. Follow the upgrade guideance and then configure and launch with godot-valet. "
label_settings = SubResource("LabelSettings_tr27p")
autowrap_mode = 3

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
position = Vector2i(250, 150)
size = Vector2i(600, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.godot")

[node name="SelectFolderForNewProjectDialog" type="FileDialog" parent="."]
title = "Open a Directory"
position = Vector2i(250, 150)
size = Vector2i(600, 500)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
show_hidden_files = true

[connection signal="pressed" from="VBoxContainer/ProjectPathHBoxContainer/SelectExistingProjectFolderButton" to="." method="_on_select_project_folder_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ProjectPathHBoxContainer/CreateNewProjectFolderButton" to="." method="_on_create_new_project_folder_button_pressed"]
[connection signal="item_selected" from="VBoxContainer/GodotVersionHBoxContainer/GodotVersionOptionButton" to="." method="_on_godot_version_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/ButtonHBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/ButtonHBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="dir_selected" from="SelectFolderForNewProjectDialog" to="." method="_on_select_folder_for_new_project_dialog_dir_selected"]
